Styles, scripts, assets. Updated README.md. Updated packages. 'Ru' translation. PHPStorm config. Environmental variables.

--- a/.env
+++ b/.env
@@ -16,6 +16,8 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=ae4cc0cf46f9fff18f86985fad6a4eff
+#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
+#TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
@@ -30,3 +32,31 @@ APP_SECRET=ae4cc0cf46f9fff18f86985fad6a4eff
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf # For Windows: "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\""
+WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage # For Windows: "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltoimage.exe\""
+###< knplabs/knp-snappy-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=semaphore
+###< symfony/lock ###
+
+###> symfony/security ###
+# set 'https' on production.
+SECURE_SCHEME=http
+###< symfony/security ###
