--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
         "easycorp/easyadmin-bundle": "^3.3",
+        "friendsofsymfony/ckeditor-bundle": "^2.3",
         "friendsofsymfony/jsrouting-bundle": "^2.7",
-        "helios-ag/fm-elfinder-bundle": "^10.1",
+        "knplabs/knp-paginator-bundle": "^5.6",
         "knplabs/knp-snappy-bundle": "^1.8",
         "nesbot/carbon": "^2.49",
         "php-flasher/flasher-sweet-alert-symfony": "^0.4.8",
@@ -52,6 +53,7 @@
         "symfony/translation": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
         "symfony/uid": "5.4.*",
+        "symfony/ux-chartjs": "^1.3",
         "symfony/validator": "5.4.*",
         "symfony/web-link": "5.4.*",
         "symfony/webpack-encore-bundle": "^1.11",
@@ -104,15 +106,20 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "elfinder:install": "symfony-cmd"
+            "ckeditor:install": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "gen-trans": [
+            "@gen-trans-ru"
+        ],
+        "gen-trans-ru": "@php bin/console translation:update ru --force --domain=messages",
+        "phpcs": "vendor/bin/php-cs-fixer list"
     },
     "conflict": {
         "symfony/symfony": "*"
