--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -4,6 +4,7 @@ framework:
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
             - en
+#            - '%locale%'
 #        providers:
 #            crowdin:
 #                dsn: '%env(CROWDIN_DSN)%'
