--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,7 +7,7 @@ parameters:
     app.api.cache_ttl: 5 # Время жизни кэша в секундах
     app.api.y_metrika.cache_ttl: 60 # fixme: rm
     app.upload.default: '%kernel.project_dir%/public/uploads'
-    app.upload.import_dir: '%kernel.project_dir%/public/uploads/documents/import'
+    app.upload.import_dir: '%app.upload.default%/documents/import'
     app.supported_locales: 'en|ru'
 
 services:
