--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -10,3 +10,8 @@ services:
       MYSQL_ROOT_PASSWORD: main
     ports:
       - 6603:3306
+    security_opt:
+      - seccomp:unconfined
+    volumes:
+      - ./mysql/conf.d:/etc/mysql/conf.d
+      - ../var/log:/var/log/mysql
