--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
         "@fortawesome/fontawesome-free": "^5.15.3",
         "@popperjs/core": "^2.9.2",
         "@symfony/stimulus-bridge": "^2.0.0",
+        "@symfony/ux-chartjs": "file:vendor//symfony/ux-chartjs/Resources/assets",
         "@symfony/webpack-encore": "^1.0.0",
         "bootstrap": "^5.0.2",
+        "chart.js": "^2.9.4",
         "core-js": "^3.0.0",
         "jquery": "^3.6.0",
         "node-sass": "^6.0.1",
